examples/all-in-one/generated/ingress-controllers/30--service--traefik-ingress-endpoint.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    example.com/generated-by: kustomize
    example.com/kustomize-component: ingresses
  name: traefik-ingress-endpoint
  namespace: ingress-controllers
spec:
  loadBalancerIP: 192.168.10.10
  ports:
  - name: main-http
    port: 80
    targetPort: main-http
  - name: main-https
    port: 443
    targetPort: main-https
  selector:
    app: traefik-ingress-lb
  type: LoadBalancer
