examples/all-in-one/generated/ingress-controllers/30--service--traefik-web-ui.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    example.com/generated-by: kustomize
    example.com/kustomize-component: ingresses
  name: traefik-web-ui
  namespace: ingress-controllers
spec:
  ports:
  - name: admin
    port: 8080
    targetPort: admin
  selector:
    app: traefik-ingress-lb
